Fix javascript align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,7 +203,8 @@ Programming Language:	CSS 3
 		background-color: rgba(255,255,255,0.4);
 	}
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px)
+{
 	#navigation_left_button
 	{
 		display: none;
